fix: z-index on buddha logo fixed
- buddha logo z-index synchronized with the hamburger toggle

--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -46,7 +46,7 @@ $navbar-height-desktop: px(80);
 // ====================================================================
 // List of z-index element
 // ====================================================================
-$elements: pages, rotate, playButton, modal, video, close, dropdownCard, menu-nav-bg, menu-nav, main-nav, cursor;
+$elements: pages, rotate, playButton, modal, video, close, dropdownCard, main-nav, menu-nav, cursor;
 
 // ====================================================================
 // Font Names
